--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
 
-    <header class="header">
-      <a href="#" class="header__logo link">NA<br>MU </a>
+    <header class="page__header header">
+      <a href="#" class="header__logo link">
+        <div class="header__logo-element header__logo-element--1">NA</div>
+        <div class="header__logo-element header__logo-element--2">MU</div>
+      </a>
       <div class="header__indent"></div>
       <div class="header__elements">
         <a href="#menu" class="header__menu-button">
-          <img src="./images/menu-icon.svg" alt="menu-icon">
+          <img src="./images/icons/menu-icon.svg" alt="">
         </a>
         <h1 class="header__title">
           ХУДОЖ<span class="header__title--special">НІЙ</span>
           <br>
           МУЗЕЙ
         </h1>
-        <a href="#" class="header__buy-button">
+        <a href="" class="header__buy-button">
           <div class="header__buy-button-text"></div>
           <div class="header__buy-button-arrow"></div>
         </a>
-        <a href="#" class="header__events link">ПОДІЇ</a>
+        <a href="#events" class="header__events link">ПОДІЇ</a>
       </div>
       <div class="header__image"></div>
     </header>
@@ -33,37 +41,264 @@
         <a href="#" class="menu__logo link">NA<br>MU </a>
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#" class="menu__link link">Галерея</a>
+            <a href="#gallery" class="menu__link link">Галерея</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Виставки та події</a>
+            <a href="#events" class="menu__link link">Виставки та події</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Відвідування</a>
+            <a href="#actual" class="menu__link link">Відвідування</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Стати нашим другом</a>
+            <a href="#subscribe" class="menu__link link">Стати нашим другом</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Про Нас</a>
+            <a href="" class="menu__link link">Про Нас</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Магазин</a>
+            <a href="" class="menu__link link">Магазин</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Блог</a>
+            <a href="" class="menu__link link">Блог</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link link">Контакти</a>
+            <a href="#contacts" class="menu__link link">Контакти</a>
           </li>
         </ul>
         <div class="menu__search">
-          <a href="#" class="menu__search-icon">
-            <img src="./images/search-icon.svg" alt="search-icon">
+          <a href="" class="menu__search-icon">
+            <img src="./images/icons/search-icon.svg" alt="search-icon">
           </a>
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+    <div class="page__section events" id="events">
+      <h2 class="page__section-title">Актуальні події</h2>
+      <div class="events__event event">
+        <img
+          src="./images/events/event1.png"
+          alt="first-event-image"
+          class="event__image"
+        >
+        <div class="event__description">
+          <div class="event__type-and-date">
+            <span class="event__type">ВИСТАВКА</span>
+            <span class="event__date">26.08-29.11.2019</span>
+          </div>
+          <a href="" class="event__title link">
+            Йду і повертаюсь
+          </a>
+          <div class="event__about">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>
+            1980-1995 років.
+          </div>
+        </div>
+      </div>
+      <div class="events__event event event--reverse">
+        <img
+          src="./images/events/event2.png"
+          alt="second-event-image"
+          class="event__image"
+        >
+        <div class="event__description event__description--reverse">
+          <div class="event__type-and-date">
+            <span class="event__type">ВИСТАВКА</span>
+            <span class="event__date">26.08-29.11.2019</span>
+          </div>
+          <a href="#" class="event__title link">
+            І спогади і мрії
+          </a>
+          <div class="event__about">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page__lecture lecture" id="actual">
+      <div class="lecture__description">
+        <div class="lecture__type-and-date">
+          <span class="lecture__type">ЛЕКЦІЯ</span>
+          <span class="lecture__date">26/08/2019 - 11:00</span>
+        </div>
+        <a href="" class="lecture__title link">
+          Від класицизму до романтизму
+        </a>
+      </div>
+    </div>
+    <div class="page__section" id="gallery">
+      <h2 class="page__section-title">Галерея</h2>
+      <div class="gallery">
+        <ul class="gallery__images">
+          <li class="gallery__images-box gallery__images-box--1">
+            <img
+              src="./images/gallery/1.png"
+              alt="gallery-image-1"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--2">
+            <img
+              src="./images/gallery/2.svg"
+              alt="gallery-image-2"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--3">
+            <img
+              src="./images/gallery/3.svg"
+              alt="gallery-image-3"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--4">
+            <img
+              src="./images/gallery/4.svg"
+              alt="gallery-image-4"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--5">
+            <img
+              src="./images/gallery/5.svg"
+              alt="gallery-image-5"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--6">
+            <img
+              src="./images/gallery/6.svg"
+              alt="gallery-image-6"
+              class="gallery__image">
+          </li>
+        </ul>
+        <div class="gallery__buttons">
+          <button class="gallery__button gallery__prev-button">
+            &lt;
+          </button>
+          <button class="gallery__button gallery__next-button">
+          	&gt;
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="page__subscription subscription" id="subscribe">
+      <div class="subscription__text">
+        <div class="subscription__title">Підписка</div>
+        <label for="subscription" class="subscription__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </label>
+      </div>
+      <form class="subscription__form" action="">
+        <input
+          id="subscription"
+          name="email"
+          type="email"
+          class="subscription__form-field"
+          placeholder="E-mail"
+          required
+        >
+        <button class="subscription__button"></button>
+      </form>
+    </div>
+
+    <footer class="page__footer footer page__section">
+      <div class="footer__icons">
+        <a href="#" class="footer__logo link">NA<br>MU</a>
+        <div class="footer__soc-links">
+          <a
+          href="https://www.facebook.com/namu.museum/"
+          rel="noopener"
+          target="_blank"
+          class="footer__soc-link link"
+          >
+            <img src="./images/icons/Facebook-icon.svg" alt="Facebook-icon">
+          </a>
+          <a
+          href="https://www.instagram.com/namu.museum/"
+          rel="noopener"
+          target="_blank"
+          class="footer__soc-link link"
+          >
+            <img src="./images/icons/insta-icon.svg" alt="Instagram-icon">
+          </a>
+        </div>
+      </div>
+      <div class="footer__wrapper">
+        <div class="footer__info">
+          <a href="#" class="footer__button">
+            <img src="./images/arrow4.svg" alt="button-icon">
+          </a>
+          <div class="footer__schedule">
+            <div class="footer__info-title">Графік роботи</div>
+            <div class="footer__schedule-hours">
+              <span class="footer__bold-text">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__bold-text">12:00 — 20:00</span> четвер
+              <br>
+              <span class="footer__bold-text">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__bold-text">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__bold-text">11:00 — 19:00</span> неділя
+            </div>
+            <div class="footer__schedule-info">
+              Вихідні понеділок,
+              <br>
+               вівторок.
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею.
+            </div>
+          </div>
+          <div class="footer__contacts" id="contacts">
+            <div class="footer__info-title">Контакти:</div>
+            <div class="footer__contacts-info">
+              <a
+                href="https://goo.gl/maps/K7qFsAibL7NKe5rEA"
+                class="footer__link link"
+                rel="noopener"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6;
+              </a>
+              Київ, 01001
+              <br>
+              <a href="tel:38044278-13-57" class="footer__link link">тел. +38 (044) 278-13-57</a>
+              факс +38 (044) 278-74-54
+              <br>
+              <a href="mailto:info@namu.kiev.ua" class="footer__link link">e-mail: info@namu.kiev.ua</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#gallery" class="footer__link link">Галерея</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link link">Про Нас</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#events" class="footer__link link">Виставки та події</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link link">Магазин</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#actual" class="footer__link link">Відвідування</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link link">Блог</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#subscribe" class="footer__link link">Стати нашим другом</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#contacts" class="footer__link link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Designed by Zhyriada Marina</span>
+      </div>
+    </footer>
   </body>
 </html>
