Form already fixed

--- a/src/index.html
+++ b/src/index.html
@@ -274,15 +274,17 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <form action="get" class="subscribe__button">
+          <form action="#" class="subscribe__button">
             <input
             type="email"
+            name="email"
             class="subscribe__button-input"
             placeholder="E-mail"
             required
+            autocomplete="off"
             >
 
-            <button class="subscribe__button-arrow">
+            <button type="button" class="subscribe__button-arrow">
             </button>
           </form>
         </div>
