--- a/src/index.html
+++ b/src/index.html
@@ -284,7 +284,7 @@
             autocomplete="off"
             >
 
-            <button type="button" class="subscribe__button-arrow">
+            <button class="subscribe__button-arrow">
             </button>
           </form>
         </div>
