--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,10 @@
             </div>
 
             <div class="grid__item grid__item--1-3 grid__item--notebook-3-5">
-              <div class="header__tickets-block">
+              <a href="#exhibitions" class="header__tickets-block">
                 <div class="header__tickets-field">КВИТКИ</div>
-                <a href="#exhibitions" class="header__button button">
-                  <div>&#10095;</div>
-                </a>
-              </div>
+                <div class="header__button button">&#10095;</div>
+              </a>
             </div>
 
             <div class="grid__item grid__item--notebook-1-2">
