--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,11 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <form class="content_subscription_content_form" action="email">
+          <form
+            class="content_subscription_content_form"
+            action="#"
+            id="form"
+          >
             <input
               type="email"
               name="email"
@@ -387,15 +391,17 @@
               Контакти:
             </p>
 
-            <p class="footer_content_text_contacts_text">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>
-              <a href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
-              <br>
-              факс +38 (044) 278-74-54
-              <br>
-              <a href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
-            </p>
+            <span class="footer_content_text_contacts_text">
+              <a class="footer_content_text_contacts_text_link" href="https://goo.gl/maps/v8ig6j7xtH2SdEsK7">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a class="footer_content_text_contacts_text_link" href="tel: +38 (044) 278-13-57">
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+              </a>
+              <a class="footer_content_text_contacts_text_link" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </span>
           </div>
 
           <div class="footer_content_text_line grid_item--tablet-2-5 grid_item--desktop-7-7"></div>
@@ -441,7 +447,7 @@
         </p>
 
         <p class="footer_bottom_text">
-          Copyright © 2019. All Rights Reserved.
+          Copyright © 2022. All Rights Reserved.
         </p>
       </div>
     </footer>
