--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
             <div class="grid__item grid__item--notebook-8-11">
               <div class="menu__schedule schedule schedule--top">
-                <h5 class="schedule__title schedule__title--top">Графік роботи</h5>
+                <div class="schedule__title schedule__title--top">Графік роботи</div>
 
                 <div class="schedule__container">
                   <p class="schedule__week schedule__week--top">
@@ -355,7 +355,7 @@
 
           <div class="grid__item grid__item--4-5 grid__item--notebook-5-6">
             <div class="footer__contact-us contact-us">
-              <h6 class="footer__title">Контакти</h6>
+              <h6 class="contact-us__title">Контакти</h6>
 
               <div id="contact-us" class="contact-us__contacts">
                 <a
