added: full header block, full exhibitions block

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header page__section">
       <div class="container">
         <div class="header__content">
           <div class="header__nav">
@@ -33,20 +33,15 @@
           <p class="header__paragraph">10 серпня - 10 листопада</p>
 
           <h1 class="header__title">
-            Мистецтво ХІХ - ХХ ст.
+            Мистецтво <br> ХІХ - ХХ ст.
           </h1>
 
-          <p class="header__paragraph">Внесок українських митців <br> у світову культуру 19-20 ст.</p>
+          <p class="header__subtitle">Внесок українських митців у світову культуру 19-20 ст.</p>
 
-          <button class="button">Купити квиток</button>
+          <button class="button header__button">Купити квиток</button>
 
-          <div class="header__image">
-            <img
-            src="images/header_image.png"
-            alt="girl"
-            class="image_girl"
-            >
-          </div>
+          <p class="header__date">10.08 - 10.10</p>
+
         </div>
       </div>
     </header>
@@ -70,36 +65,38 @@
           </div>
 
           <div class="menu__info">
-            <div class="menu__info-title">
-              Розклад сьогодні:
+            <div class="menu__info-container">
+              <div class="menu__info-title">
+                Розклад сьогодні:
+              </div>
+
+              <a href="#" class="menu__info-link">
+                12:00 - 19:00
+              </a>
             </div>
 
-            <a href="#" class="menu__info-link">
-              12:00 - 19:00
-            </a>
-          </div>
+            <div class="menu__info-container">
+              <div class="menu__info-title">
+                Адреса:
+              </div>
 
-          <div class="menu__info">
-            <div class="menu__info-title">
-              Адреса:
+              <a href="#" class="menu__info-link">
+                Київ, вул. М. Грушевського, 6
+              </a>
             </div>
-
-            <a href="#" class="menu__info-link">
-              Київ, вул. М. Грушевського, 6
-            </a>
           </div>
 
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Актуальні виставки</a>
+              <a href="#exhibitions" class="menu__link">Актуальні виставки</a>
             </li>
 
             <li class="menu__item">
-              <a href="#" class="menu__link">Найближчі події</a>
+              <a href="#events" class="menu__link">Найближчі події</a>
             </li>
 
             <li class="menu__item">
-              <a href="#" class="menu__link">Новини</a>
+              <a href="#news" class="menu__link">Новини</a>
             </li>
           </ul>
 
@@ -107,5 +104,110 @@
         </div>
       </div>
     </nav>
+
+    <main>
+      <section class="page__section" id="exhibitions">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні виставки
+          </h2>
+        </div>
+
+        <div class="exhibitions">
+          <div class="exhibitions__first">
+            <div class="exhibitions__photo">
+              <img
+                src="images/photo/image1.png"
+                alt="photo1"
+                class="exhibitions__photo-image"
+              >
+            </div>
+
+            <div class="exhibitions__date">
+              11.07 - 22.09
+            </div>
+
+            <div class="exhibitions__title">
+              Кураторська виставка “Ангели”
+            </div>
+
+            <div class="exhibitions__subtitle">
+              Виставковий проект «Ангели» – <br>
+              знакова подія для української культури і<br> водночас наймасштабніший...
+            </div>
+
+            <button class="button exhibitions__button">Купити квиток</button>
+          </div>
+
+          <div class="exhibitions__second">
+            <div class="exhibitions__photo">
+              <img
+                src="images/photo/image2.png"
+                alt="photo1"
+                class="exhibitions__photo-image"
+              >
+            </div>
+
+            <div class="exhibitions__date">
+              Діє постійно
+            </div>
+
+            <div class="exhibitions__title">
+              Мистецтво ХХ ст. — XXI ст.
+            </div>
+
+            <div class="exhibitions__subtitle">
+              Знакові роботи Алли Горської, <br> Миколи Самокиша, Федора <br> Кричевського та інших митців.
+            </div>
+
+            <button class="button exhibitions__button">Купити квиток</button>
+          </div>
+
+        </div>
+
+
+
+      </section>
+
+      <section class="page__section" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Найближчі події
+          </h2>
+        </div>
+      </section>
+
+      <section class="page__section--special">
+        <div class="container">
+          <h2 class="page__section--special-title">
+            Сплануйте
+            <br>
+            візит до музею
+          </h2>
+
+          <p class="page__section--special-paragraph">
+            Оберіть зручний день,<br> зареєструйтесь на події, що <br>  цікавлять, купіть квиток заздалегідь, <br> щоб ніщо не завадило вам <br> насолоджуватись мистецтвом.
+          </p>
+
+          <button class="button">Почати</button>
+        </div>
+      </section>
+
+      <section class="page__section" id="news">
+        <div class="container">
+          <h2 class="page__section-title">
+            Новини
+          </h2>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="container">
+          <h2 class="page__section-title">
+            Підпишіться на дайджест
+          </h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
