added: full news, events block

--- a/src/index.html
+++ b/src/index.html
@@ -165,8 +165,6 @@
 
         </div>
 
-
-
       </section>
 
       <section class="page__section" id="events">
@@ -174,7 +172,67 @@
           <h2 class="page__section-title">
             Найближчі події
           </h2>
+
+          <div class="events">
+            <div class="events__first">
+              <div class="events__photo">
+                <img
+                  src="images/photo/image3.png"
+                  alt="photo1"
+                  class="events__photo-image"
+                >
+              </div>
+
+              <div class="events__content">
+
+                <div class="events__date">
+                  14.08 о 13:00
+                </div>
+
+                <div class="events__title">
+                  Кураторські екскурсії від Павла Гудімова
+                </div>
+
+                <div class="events__subtitle">
+                  Таємниці підготовки, історії експонатів, магія дійства до <br> і в момент вашої присутності – розгортатиметься...
+                </div>
+
+                <button class="button exhibitions__button">Зареєструватись</button>
+              </div>
+
+            </div>
+
+            <div class="events__second">
+              <div class="events__photo">
+                <img
+                  src="images/photo/image4.png"
+                  alt="photo1"
+                  class="events__photo-image"
+                >
+              </div>
+
+              <div class="events__content">
+                <div class="events__date">
+                  16.08 о 13:00
+                </div>
+
+                <div class="events__title">
+                  Майстер-клас “Подорож до Австралії”
+                </div>
+
+                <div class="events__subtitle">
+                  Цієї неділі о 14:00 на <br> арт-мандрівників чекає останній <br> пункт кругосвітньої подорожі - Австралія.
+                </div>
+
+                <button class="button exhibitions__button">Зареєструватись</button>
+              </div>
+
+            </div>
+
+          </div>
         </div>
+
+
       </section>
 
       <section class="page__section--special">
@@ -186,7 +244,7 @@
           </h2>
 
           <p class="page__section--special-paragraph">
-            Оберіть зручний день,<br> зареєструйтесь на події, що <br>  цікавлять, купіть квиток заздалегідь, <br> щоб ніщо не завадило вам <br> насолоджуватись мистецтвом.
+            Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом.
           </p>
 
           <button class="button">Почати</button>
@@ -199,6 +257,55 @@
             Новини
           </h2>
         </div>
+
+        <div class="news">
+          <div class="news__first">
+            <div class="news__photo">
+              <img
+                src="images/photo/image6.png"
+                alt="photo1"
+                class="news__photo-image"
+              >
+            </div>
+
+            <div class="news__date">
+              9 серпня 2019
+            </div>
+
+            <div class="news__title">
+              Оголошення переможця
+            </div>
+
+            <div class="news__subtitle">
+              Друзі, сьогодні п'ятниця! <br> А це означає, що час оголосити переможця розіграшу...
+            </div>
+
+          </div>
+
+          <div class="news__second">
+            <div class="news__photo">
+              <img
+                src="images/photo/image7.png"
+                alt="photo1"
+                class="news__photo-image"
+              >
+            </div>
+
+            <div class="news__date">
+              9 серпня 2019
+            </div>
+
+            <div class="news__title">
+              Міжнародний день котів
+            </div>
+
+            <div class="news__subtitle">
+              Музей з левами не може просто так взяти <br> і пропустити Міжнародний день котів!
+            </div>
+
+          </div>
+
+        </div>
       </section>
 
       <section class="page__section">
@@ -209,5 +316,9 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
