added: form for contact block

--- a/src/index.html
+++ b/src/index.html
@@ -310,10 +310,37 @@
 
       <section class="page__section">
         <div class="container">
-          <h2 class="page__section-title">
-            Підпишіться на дайджест
-          </h2>
+          <div class="contact">
+            <div class="contact__title">
+              <h2 class="page__section-title">
+                Підпишіться на дайджест
+              </h2>
+
+              <p class="contact__paragraph">
+                Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів
+              </p>
+            </div>
+
+            <form
+              action="#"
+              class="contact__form"
+              method="post"
+            >
+              <input
+                type="email"
+                class="contact__input"
+                name="email"
+                placeholder="e-mail"
+                required
+              >
+
+              <button class="button">Підписатись</button>
+
+            </form>
+
+          </div>
         </div>
+
       </section>
     </main>
 
