--- a/src/index.html
+++ b/src/index.html
@@ -393,7 +393,11 @@
             </p>
 
             <span class="footer_content_text_contacts_text">
-              <a class="footer_content_text_contacts_text_link" href="https://goo.gl/maps/v8ig6j7xtH2SdEsK7">
+              <a
+                class="footer_content_text_contacts_text_link"
+                href="https://goo.gl/maps/v8ig6j7xtH2SdEsK7"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
               <a class="footer_content_text_contacts_text_link" href="tel: +38 (044) 278-13-57">
