--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>NAMU</title>
     <link
       rel="icon"
+      href="./images/NA MU.svg"
       type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
@@ -185,7 +186,11 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </label>
       </div>
-      <form class="subscription__form" action="">
+      <form
+        action="#"
+        matod="post"
+        class="subscription__form"
+      >
         <input
           id="subscription"
           name="email"
@@ -194,7 +199,7 @@
           placeholder="E-mail"
           required
         >
-        <button class="subscription__button"></button>
+        <button type="submit" class="subscription__button"></button>
       </form>
     </div>
 
