--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="images/NAMU.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -345,7 +346,98 @@
     </main>
 
     <footer class="footer">
+      <div class="container">
+        <div class="footer__container">
+          <div class="footer__content">
+            <div class="footer__contacts">
+              <div class="footer__title">Контакти</div>
+              <a href="#" class="footer__subtitle">
+                Київ, <br>
+                вул. М. Грушевського, 6 <br>
+                тел. 278-13-57, 278-74-54 <br>
+                info@namu.kiev.ua
+              </a>
 
+              <div class="footer__icon">
+                <a href="#">
+                  <img
+                    src="images/facebook.png"
+                    alt="facebook icon"
+                    class="footer__icon-image"
+                  >
+                </a>
+
+                <a href="#">
+                  <img
+                    src="images/twitter.png"
+                    alt="twitter icon"
+                    class="footer__icon-image"
+                  >
+                </a>
+
+                <a href="#">
+                  <img
+                    src="images/telegram.png"
+                    alt="telegram icon"
+                    class="footer__icon-image"
+                  >
+                </a>
+
+                <a href="#">
+                  <img
+                    src="images/instagram.png"
+                    alt="instagram icon"
+                    class="footer__icon-image"
+                  >
+                </a>
+              </div>
+            </div>
+
+            <div class="footer__shedule">
+              <div class="footer__title">Розклад роботи</div>
+
+              <a href="#" class="footer__subtitle">
+                ПН: вихідний <br>
+                ВТ: вихідний <br>
+                СР: 10:00 - 17:00 <br>
+                ЧТ: 10:00 - 17:00 <br>
+                ПТ: 12:00 - 19:00 <br>
+                СБ: 11:00 - 18:00 <br>
+                НД: 10:00 - 17:00 <br>
+              </a>
+            </div>
+
+            <div class="footer__links">
+              <a href="#" class="footer__title footer__links-title">Головна</a>
+
+              <ul class="footer__links--list">
+                <li class="footer__links--list-item">
+                  <a href="#exhibitions" class="footer__links--list-link">Виставки</a>
+                </li>
+                <li class="footer__links--list-item">
+                  <a href="#events" class="footer__links--list-link">Події</a>
+                </li>
+                <li class="footer__links--list-item">
+                  <a href="#news" class="footer__links--list-link">Новини</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__bottom">
+            <div class="footer__bottom--title">
+              <p class="footer__bottom--title-paragraph">© 2010 — 2020</p>
+              <p class="footer__bottom--title-paragraph">Privacy — Terms</p>
+            </div>
+
+            <div class="footer__bottom--icon">
+              <a href="#">
+                <img src="images/scroll up.png" alt="#">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
