--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
             </h2>
             <div class="hero__button">
               <div class="hero__button--item">
-                кивтки
+                квитки
               </div>
               <a href="#exhibition" class="hero__button--search">
                 >
