fixed: form, input on tablet; added: links to location, tel

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
-    <link rel="icon" href="images/NAMU.png">
+    <link
+      rel="icon"
+      href="images/NAMU.svg"
+      type="image/favicon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="header page__section">
@@ -50,7 +53,8 @@
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <div class="menu__nav">
+          <div class="header__nav">
+
             <a href="#" class="logo">
               <img
                 src="images/logo.png"
@@ -58,8 +62,8 @@
                 class="logo__image"
               >
             </a>
-            <div class="icon__nav">
-              <a href="#" class="icon icon__languages">UA</a>
+            <div class="header__nav--content icon__nav">
+              <a href="#" class="header__languages">UA</a>
 
               <a href="#" class="icon icon__cross"></a>
             </div>
@@ -324,13 +328,11 @@
 
             <form
               action="#"
-              class="contact__form"
-              method="post"
+              class="contact__form form"
             >
               <input
                 type="email"
-                class="contact__input"
-                name="email"
+                class="contact__input form-field"
                 placeholder="e-mail"
                 required
               >
@@ -351,12 +353,12 @@
           <div class="footer__content">
             <div class="footer__contacts">
               <div class="footer__title">Контакти</div>
-              <a href="#" class="footer__subtitle">
+              <a href="https://maps.visicom.ua/i/ADR3K0MXUA67Y830US?lang=uk" class="footer__subtitle">
                 Київ, <br>
-                вул. М. Грушевського, 6 <br>
-                тел. 278-13-57, 278-74-54 <br>
-                info@namu.kiev.ua
+                вул. М. Грушевського, 6
               </a>
+              <a href="tel:278-13-57, 278-74-54" class="footer__subtitle">тел. 278-13-57, 278-74-54</a>
+              <a href="email:info@namu.kiev.ua" class="footer__subtitle footer__subtitle-mail">info@namu.kiev.ua</a>
 
               <div class="footer__icon">
                 <a href="#">
@@ -396,7 +398,7 @@
             <div class="footer__shedule">
               <div class="footer__title">Розклад роботи</div>
 
-              <a href="#" class="footer__subtitle">
+              <div class="footer__subtitle-text">
                 ПН: вихідний <br>
                 ВТ: вихідний <br>
                 СР: 10:00 - 17:00 <br>
@@ -404,7 +406,7 @@
                 ПТ: 12:00 - 19:00 <br>
                 СБ: 11:00 - 18:00 <br>
                 НД: 10:00 - 17:00 <br>
-              </a>
+              </div>
             </div>
 
             <div class="footer__links">
@@ -439,5 +441,6 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
