--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,8 @@
           </div>
         </nav>
 
+        <div class="menu_header_line"></div>
+
         <div class="menu_header_info">
           <p class="menu_header_info_title">
             Графік роботи
