--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76" href="favicon/apple-touch-icon.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32" href="favicon/favicon-32x32.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="76x76"
+    href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png"
+    sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png"
+    sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
-    <link
-      rel="mask-icon"
-      href="favicon/safari-pinned-tab.svg" color="#172a2f">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="theme-color" content="#e71c1c">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>Museum</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" >
@@ -284,14 +276,14 @@
                 </div>
               </a>
               <div class="footer__social--web">
-                <a href="https://www.facebook.com">
+                <a target="_blank" href="https://www.facebook.com">
                   <img
                     class="footer__social--web-logo"
                     src="./images/Facebook (1).svg"
                     alt="facebook"
                   >
                 </a>
-                <a href="https://www.instagram.com">
+                <a target="_blank" href="https://www.instagram.com">
                   <img
                     class="footer__social--web-logo"
                     src="./images/instagram.svg"
@@ -365,10 +357,10 @@
 
         <div class="footer__copyright">
           <div class="footer__copyright--text">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2022. All Rights Reserved.
           </div>
           <div class="footer__copyright--text">
-            Designed by Zhyriada Marina
+            Designed by Kornieiev Sasha
           </div>
         </div>
       </footer>
