--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           ">
           <img
             class="header__image"
-            src="./images/header.png"
+            src="./images/NHM.png"
             alt="Museum Entry"
             >
         </div>
@@ -86,7 +86,7 @@
                 <a href="#events" class="menu__link">Галерея</a>
               </li>
               <li class="menu__item">
-                <a href="#gallery" class="menu__link">Виставки та події</a>
+                <a href="#gallery" class="menu__link">Виставки та<br class="menu__br">події</a>
               </li>
             </div>
 
@@ -583,13 +583,21 @@
               </div>
 
               <div class="contacts__text">
-                вул. М. Грушевського, 6; Київ, 01001
+                <a
+                  href="https://goo.gl/maps/LASFYeWXAo6UVAEh9"
+                  class="contacts__text--email">вул. М. Грушевського, 6; Київ, 01001
+                </a>
                 <br>
                 тел. +38 (044) 278-13-57
                 <br>
                 факс +38 (044) 278-74-54
                 <br>
+                <a
+                href="mailto:info@namu.kiev.ua"
+                class="contacts__text--email">
                 e-mail: info@namu.kiev.ua
+                </a>
+
               </div>
             </div>
 
