fixed maiilto link

--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
                   </a><br>
                   <a class="footer__link" href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a><br>
                   <a class="footer__link" href="tel: +38 (044) 278-74-54">факс +38 (044) 278-74-54</a><br>
-                  <a class="footer__link" href="email: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a><br>
+                  <a class="footer__link" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a><br>
                 </p>
               </div>
             </div>
