--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
           </li>
         </ul>
         <div class="menu__search">
-          <a href="" class="menu__search-icon">
+          <a href="#" class="menu__search-icon">
             <img src="./images/icons/search-icon.svg" alt="search-icon">
           </a>
         </div>
