Images overflow and contact links changed

--- a/src/index.html
+++ b/src/index.html
@@ -284,13 +284,22 @@
             <div id="contacts">
               <h3 class="footer__subtitle">Контакти:</h3>
               <p>
-                вул. М. Грушевського, 6; Київ, 01001
-                <br>
-                тел. +38 (044) 278-13-57
-                <br>
-                факс +38 (044) 278-74-54
-                <br>
-                e-mail: info@namu.kiev.ua
+                <a
+                  href="https://goo.gl/maps/bW6iaxXCTkmCPfHR9"
+                  class="footer__contact-link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="tel: +38 (044) 278-13-57" class="footer__contact-link">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="tel: +38 (044) 278-74-54" class="footer__contact-link">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a href="mailto: info@namu.kiev.ua" class="footer__contact-link">
+                  e-mail: info@namu.kiev.ua
+                </a>
               </p>
             </div>
           </div>
