--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           <div class="menu__content--top">
             <a href="#" >
               <img
-                class="header__menu-close container"
+                class="header__menu-close"
                 src="./images/menu-close.svg"
                 alt="opener"
               >
@@ -364,11 +364,11 @@
           </div>
         </div>
       </footer>
-      <button id="backToTop" class="page__back-to-top">
-        <a href="#">
+      <a href="#">
+        <button id="backToTop" class="page__back-to-top">
           <img src="./images/back -to-top.svg" alt="back-to-top">
-        </a>
-      </button>
+        </button>
+      </a>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
